--- a/src/BUILD
+++ b/src/BUILD
@@ -33,6 +33,7 @@ cc_library(
     "data_type.cc",
     "data_base.cc",
     "driver.cc",
+    "file.cc",
     "http_client.cc",
     "ick_storm_data.cc",
     "ick_storm_service_socket.cc",
@@ -86,6 +87,7 @@ cc_library(
     "data_type.h",
     "data_base.h",
     "driver.h",
+    "file.h",
     "http_client.h",
     "ick_storm_data.h",
     "ick_storm_service_socket.h",
